@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Added timelocal and timegm functions where available.
 
 1.001     2019-10-10 13:58:11 EDT
   - Added from_object constructor for Time::FFI::tm.
